<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F0F0">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFFF463C"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#FFFFFFFF"
        android:text="@string/title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_simple_corner">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/time_interval"/>
        <EditText
            android:id="@+id/activity_setting_et_minute_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/unit_minute"/>
        <EditText
            android:id="@+id/activity_setting_et_second_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/unit_second"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_simple_corner">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/relax_time"/>
        <EditText
            android:id="@+id/activity_setting_et_relax_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/unit_minute"/>
        <EditText
            android:id="@+id/activity_setting_et_relax_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/unit_second"/>
    </LinearLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <Button
        android:id="@+id/activity_setting_bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_button_normal"
		android:textColor="#FFFFFFFF"
		android:textSize="25sp"
        android:text="@string/confirm"/>
    
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/info"/>

</TableLayout>