<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFFF463C"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#FFFFFFFF"
        android:text="@string/title" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <TextView
        android:id="@+id/activity_choose_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="40sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <View
	        android:layout_width="0dp"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
        <Button
	        android:id="@+id/activity_choose_bt_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="end"
	        android:background="@drawable/shape_button_corner_gray"
	        android:layout_margin="35dp"
	        android:text="@string/cancel" />
	    
	    <Button
	        android:id="@+id/activity_choose_bt_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="end"
	        android:background="@drawable/shape_button_corner_red"
	        android:layout_margin="35dp"
	        android:text="@string/confirm" />
	    <View
	        android:layout_width="0dp"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
        
    </LinearLayout>
    

    
    
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    

</LinearLayout>
